# screen-poisson-py

./: CMakeLists.txt  LICENSE  README.md
src/: BackendCUDA.cu  Solver.cpp  Solver.hpp  screen_poisson_py.cpp
